# spo

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
books/: models.py  permissions.py  serializers.py  views.py
books/fixtures/: initial_data.json
circulation/: models.py  serializers.py  views.py
notifications/: models.py
recommendations/: models.py  serializers.py  services.py  views.py
reservations/: models.py
smartlib/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  views.py
