[project]
name = "smartlib"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (==4.2.7)",
    "djangorestframework (==3.14.0)",
    "djangorestframework-simplejwt (==5.3.0)",
    "drf-yasg (==1.21.7)",
    "django-cors-headers (==4.3.1)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
